--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -136,298 +136,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"8\" halign=\"left\">Year</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Age</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">GDP</th>\n",
-       "      <th colspan=\"8\" halign=\"left\">GDP_log</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>...</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Country</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Chile</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>4.760952</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2003.75</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>2011.25</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>78.94375</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.449515e+11</td>\n",
-       "      <td>2.783840e+11</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.180333</td>\n",
-       "      <td>0.224071</td>\n",
-       "      <td>10.843462</td>\n",
-       "      <td>10.970248</td>\n",
-       "      <td>11.238037</td>\n",
-       "      <td>11.389017</td>\n",
-       "      <td>11.444644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>China</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>4.760952</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2003.75</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>2011.25</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>74.26250</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.819550e+12</td>\n",
-       "      <td>1.106470e+13</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>12.578339</td>\n",
-       "      <td>0.342054</td>\n",
-       "      <td>12.083270</td>\n",
-       "      <td>12.273464</td>\n",
-       "      <td>12.606542</td>\n",
-       "      <td>12.892557</td>\n",
-       "      <td>13.043940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Germany</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>4.760952</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2003.75</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>2011.25</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>79.65625</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.596078e+12</td>\n",
-       "      <td>3.890610e+12</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>12.479788</td>\n",
-       "      <td>0.103750</td>\n",
-       "      <td>12.290023</td>\n",
-       "      <td>12.437334</td>\n",
-       "      <td>12.531004</td>\n",
-       "      <td>12.555695</td>\n",
-       "      <td>12.590018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mexico</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>4.760952</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2003.75</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>2011.25</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>75.71875</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.156992e+12</td>\n",
-       "      <td>1.298460e+12</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>11.980012</td>\n",
-       "      <td>0.095844</td>\n",
-       "      <td>11.834833</td>\n",
-       "      <td>11.882518</td>\n",
-       "      <td>12.001567</td>\n",
-       "      <td>12.063320</td>\n",
-       "      <td>12.113429</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>United States of America</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>4.760952</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2003.75</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>2011.25</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>78.06250</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.567500e+13</td>\n",
-       "      <td>1.810000e+13</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>13.142147</td>\n",
-       "      <td>0.077161</td>\n",
-       "      <td>13.012837</td>\n",
-       "      <td>13.082603</td>\n",
-       "      <td>13.159865</td>\n",
-       "      <td>13.195128</td>\n",
-       "      <td>13.257679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Zimbabwe</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>4.760952</td>\n",
-       "      <td>2000.0</td>\n",
-       "      <td>2003.75</td>\n",
-       "      <td>2007.5</td>\n",
-       "      <td>2011.25</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>50.09375</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.263446e+10</td>\n",
-       "      <td>1.630467e+10</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>9.914099</td>\n",
-       "      <td>0.196640</td>\n",
-       "      <td>9.645000</td>\n",
-       "      <td>9.759539</td>\n",
-       "      <td>9.828243</td>\n",
-       "      <td>10.100444</td>\n",
-       "      <td>10.212312</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          Year                                             \\\n",
-       "                         count    mean       std     min      25%     50%   \n",
-       "Country                                                                     \n",
-       "Chile                     16.0  2007.5  4.760952  2000.0  2003.75  2007.5   \n",
-       "China                     16.0  2007.5  4.760952  2000.0  2003.75  2007.5   \n",
-       "Germany                   16.0  2007.5  4.760952  2000.0  2003.75  2007.5   \n",
-       "Mexico                    16.0  2007.5  4.760952  2000.0  2003.75  2007.5   \n",
-       "United States of America  16.0  2007.5  4.760952  2000.0  2003.75  2007.5   \n",
-       "Zimbabwe                  16.0  2007.5  4.760952  2000.0  2003.75  2007.5   \n",
-       "\n",
-       "                                            Age            ...           GDP  \\\n",
-       "                              75%     max count      mean  ...           75%   \n",
-       "Country                                                    ...                 \n",
-       "Chile                     2011.25  2015.0  16.0  78.94375  ...  2.449515e+11   \n",
-       "China                     2011.25  2015.0  16.0  74.26250  ...  7.819550e+12   \n",
-       "Germany                   2011.25  2015.0  16.0  79.65625  ...  3.596078e+12   \n",
-       "Mexico                    2011.25  2015.0  16.0  75.71875  ...  1.156992e+12   \n",
-       "United States of America  2011.25  2015.0  16.0  78.06250  ...  1.567500e+13   \n",
-       "Zimbabwe                  2011.25  2015.0  16.0  50.09375  ...  1.263446e+10   \n",
-       "\n",
-       "                                       GDP_log                       \\\n",
-       "                                   max   count       mean       std   \n",
-       "Country                                                               \n",
-       "Chile                     2.783840e+11    16.0  11.180333  0.224071   \n",
-       "China                     1.106470e+13    16.0  12.578339  0.342054   \n",
-       "Germany                   3.890610e+12    16.0  12.479788  0.103750   \n",
-       "Mexico                    1.298460e+12    16.0  11.980012  0.095844   \n",
-       "United States of America  1.810000e+13    16.0  13.142147  0.077161   \n",
-       "Zimbabwe                  1.630467e+10    16.0   9.914099  0.196640   \n",
-       "\n",
-       "                                                                      \\\n",
-       "                                min        25%        50%        75%   \n",
-       "Country                                                                \n",
-       "Chile                     10.843462  10.970248  11.238037  11.389017   \n",
-       "China                     12.083270  12.273464  12.606542  12.892557   \n",
-       "Germany                   12.290023  12.437334  12.531004  12.555695   \n",
-       "Mexico                    11.834833  11.882518  12.001567  12.063320   \n",
-       "United States of America  13.012837  13.082603  13.159865  13.195128   \n",
-       "Zimbabwe                   9.645000   9.759539   9.828243  10.100444   \n",
-       "\n",
-       "                                     \n",
-       "                                max  \n",
-       "Country                              \n",
-       "Chile                     11.444644  \n",
-       "China                     13.043940  \n",
-       "Germany                   12.590018  \n",
-       "Mexico                    12.113429  \n",
-       "United States of America  13.257679  \n",
-       "Zimbabwe                  10.212312  \n",
-       "\n",
-       "[6 rows x 32 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdp_data.groupby('Country').describe()"
+    "gdp_data.groupby('Country').describe()\n",
+    "gdp_data.groupby('Country').describe().to_csv(\"countries_summary.csv\")"
    ]
   },
   {
